Implementando validacao de acesso signup

--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -6,7 +6,7 @@
         <h1><a href="/">RateMe</a></h1>
     </div>
    <br><br>
-   
+
    <div class="col-md-offset-4">
          <a href="/auth/facebook" class="btn btn-block btn-social btn-facebook btn-lg">
             <i class="fa fa-facebook"></i> Sign up with Facebook
@@ -19,6 +19,15 @@
    </div><br>
 
     <div class="row signup">
+        <% if(hasErros) {%>
+          <% for(var i= 0; i <= messages.length; i++) %>
+              <div class="alert alert-danger">
+                  <a href="#" class="close" data-dismiss="alert" arial-label="close">
+                    x
+                  </a>
+                  <%= messages[i] %> simao
+              </div>
+        <% }  %>
 
         <form method="POST" class="" id="signupForm" action="/signup">
 
